Assignment 1 fixing broken css

--- a/web/indexStyle.css
+++ b/web/indexStyle.css
@@ -1,6 +1,7 @@
-.body {
+body {
     background-color: lightgray;
 }
+
 .header {
     background-color: cornflowerblue;
     border-bottom-style: solid;
